# atlas/service/doctype/proxy_server/proxy_server.py
@@ -86,6 +86,7 @@ class ProxyServer(Document):
 			"disk_mib": values.get("disk_mib"),
 			"tenant_id": 0,
 			"is_privileged": True,
+			"is_termination_protected": True,
 			"hostname": proxy_server.name,
 			"ssh_keys": frappe.get_single("Atlas Settings").public_ssh_key,
 			"egress": "uplink",
@@ -159,7 +160,9 @@ class ProxyServer(Document):
 		self.remove_dns_record()
 		if self.virtual_machine:
 			if frappe.db.exists("Virtual Machine", self.virtual_machine):
-				frappe.get_doc("Virtual Machine", self.virtual_machine).terminate()
+				virtual_machine = frappe.get_doc("Virtual Machine", self.virtual_machine)
+				virtual_machine.set_termination_protection(False)
+				virtual_machine.terminate()
 			self.add_comment("Info", _("Archived with Virtual Machine {0}.").format(self.virtual_machine))
 
 		self.db_set(
